# text-to-sql-multi-agents

./: .gitignore  README.md  pre-commit-config.yaml  pyproject.toml
docs/: architecture.md
docs/diagrams/: deployment.puml  orchestration.puml
src/text_to_sql_agents/: main.py
src/text_to_sql_agents/agents/: executor.py  guardrail.py  plot_generator.py  powerbi_exporter.py  regenerator.py  sql_generator_agent.py  summarizer.py  viz_recommender.py
src/text_to_sql_agents/config/: settings.yaml
src/text_to_sql_agents/magentic_orchestration/: agent_registry.py  magentic_controller.py  workflow_plans.yaml
src/text_to_sql_agents/magentic_orchestration/adapters/: azure_foundry_adapter.py  semantic_kernel_adapter.py  sql_adapter.py
src/text_to_sql_agents/models/: base_models.py  config_models.py  orchestration_model.py  sql_models.py  vizualization_models.py
src/text_to_sql_agents/service/: foundry_service.py  kernel_factory.py  plugin_registry.py
src/text_to_sql_agents/skills/sql/: generate_sql.yaml  repair_sql.yaml
src/text_to_sql_agents/skills/summary/: summarize.yaml
src/text_to_sql_agents/skills/visualization/: recommend_chart.yaml
src/text_to_sql_agents/utils/: config_loader.py
